# cup-be

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY_HARDENING_SPEC.md  docker-compose.yml  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5e83731764d3_initial_migration.py  6438dcfc8f06_add_is_super_field_to_user.py  8b6d20fef5c6_add_token_blacklist_table.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  users.py
app/core/: config.py  logging.py  ratelimit.py  security.py
app/db/: session.py
app/middleware/: logging.py
app/models/: user.py
docs/: api.md  architecture.md  index.md  release.md  setup.md
scripts/: build.sh  bump_version.py  bump_version.sh  release.sh
tests/: test_auth.py  test_cors.py  test_logging.py  test_main.py  test_password_complexity.py  test_ratelimit.py  test_version.py
